fixed layout issue where a single row of boards would be displayed differently than when you have multiple rows of boards. set up directory skeleton for lists module (what boards consist of)

--- a/meanjs/modules/boards/client/css/boards.css
+++ b/meanjs/modules/boards/client/css/boards.css
@@ -1,10 +1,9 @@
 .boards-container{
-
-
+   margin-top: 5%;
 }
 
 .list-boards{
-
+   display: block;
 }
 
 .single-board{
